--- a/src/app/dnd-main/dnd-main.component.html
+++ b/src/app/dnd-main/dnd-main.component.html
@@ -147,6 +147,15 @@
               <label class="form-label" for="textAreaExample"
                 >Type your message</label
               >
+              <form class="d-flex justify-content-end">
+                <button
+                  class="btn btn-outline-success d-flex justify-content-end"
+                  type="submit"
+                  (click)="onSave()"
+                >
+                  Save
+                </button>
+              </form>
             </div>
           </div>
         </div>
