--- a/src/app/dnd-main/dnd-main.component.html
+++ b/src/app/dnd-main/dnd-main.component.html
@@ -1,4 +1,3 @@
-
 <section style="background-color: #eee">
   <div class="container py-5">
     <div>
@@ -92,6 +91,10 @@
                 >
                   Save
                 </button>
+                <div *ngFor="let user of users">
+                  <p>{{ user.name }}</p>
+                  <p>{{ user.content }}</p>
+                </div>
               </form>
             </div>
           </div>
