--- a/src/app/dnd-main/dnd-main.component.html
+++ b/src/app/dnd-main/dnd-main.component.html
@@ -93,7 +93,7 @@
                 </button>
                 <div *ngFor="let user of users">
                   <p>{{ user.name }}</p>
-                  <p>{{ user.content }}</p>
+                  <p>{{ user.password }}</p>
                 </div>
               </form>
             </div>
