Added Submit Button and Deleted Save Button

--- a/src/app/dnd-main/dnd-main.component.html
+++ b/src/app/dnd-main/dnd-main.component.html
@@ -87,9 +87,9 @@
                 <button
                   class="btn btn-outline-success d-flex justify-content-end"
                   type="submit"
-                  (click)="onSave()"
+                  (click)="onSubmit()"
                 >
-                  Save
+                  Submit
                 </button>
               </form>
             </div>
