Disabled Signup and Login Page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -50,12 +50,12 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/login"
+          <a class="nav-link disabled" aria-current="page" routerLink="/login"
             >Login</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/signup"
+          <a class="nav-link disabled" aria-current="page" routerLink="/signup"
             >Sign-Up</a
           >
         </li>
