--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -50,7 +50,7 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/login"
+          <a class="nav-link disabled" aria-current="page" routerLink="/login"
             >Login</a
           >
         </li>
