add place holder

--- a/src/app/dnd-main/dnd-main.component.html
+++ b/src/app/dnd-main/dnd-main.component.html
@@ -80,6 +80,7 @@
                 [(ngModel)]="questions"
                 (keyup.enter)="onSubmit()"
                 [disabled]="isLoading"
+                placeholder="You can type anything to start..."
               >        
             </textarea>
             <div *ngIf = "isLoading" >
